Fixed a CSS class in order to support righ-aligned info labels

--- a/basic-application/basic-application-webapp/src/main/java/fr/openwide/core/basicapp/web/application/common/template/styles/description-scaffolding.less
+++ b/basic-application/basic-application-webapp/src/main/java/fr/openwide/core/basicapp/web/application/common/template/styles/description-scaffolding.less
@@ -52,13 +52,13 @@
 				display: inline-block;
 				max-width: 160px;
 				width: 40%;
+				margin-right: 2%;
 			}
 			
 			.info-content {
 				display: block;
 				overflow: hidden; // Block Formatting Context; see http://colinaarts.com/articles/the-magic-of-overflow-hidden/
 				min-height: @line-height-computed;
-				margin-left: 2%;
 			}
 		}
 	}
